--- a/src/assets/scss/_vars.scss
+++ b/src/assets/scss/_vars.scss
@@ -14,6 +14,7 @@ $color-gld03: #8f7848;
 $color-gld04: #9a721e;
 $color-gld04cf:#9a721ecf;
 $color-gld05: #BF9F60;
+$color-gld06: #B19F7B;
 
 $color-gry00: #f6f6f6;
 $color-gry01: #eaeaea;
