--- a/src/app/pages/myplan/myplan.component.html
+++ b/src/app/pages/myplan/myplan.component.html
@@ -190,18 +190,19 @@
             <dt>{{ "Spot" | translate }}</dt>
             <dt>{{ "Movement" | translate }}</dt>
           </dl>
-          <div *ngFor="let item of row && row.planSpots ? row.planSpots : spotZero; index as i;trackBy: myTrackBy" cdkDrag>
-            <dl class="td">
-              <dt>
-                <button (click)="onClickSpotDelete(item)" class="remove">
-                </button>
-              </dt>
-              <dt>
-                <mat-accordion #mepSpot="matAccordion" multi>
-                  <mat-expansion-panel #mepSpot{{i}} class="transfer">
-                    <mat-expansion-panel-header
-                      [@.disabled]="true"
-                    >
+
+          <ng-container *ngFor="let item of row && row.planSpots ? row.planSpots : spotZero; index as i;trackBy: myTrackBy">
+            <mat-accordion #mepSpot="matAccordion" multi>
+              <mat-expansion-panel #mepSpot{{i}} class="transfer" hideToggle>
+                <mat-expansion-panel-header
+                  [@.disabled]="true"
+                >
+                  <dl class="td">
+                    <dt>
+                      <button (click)="onClickSpotDelete(item)" class="remove">
+                      </button>
+                    </dt>
+                    <dt>
                       <div class="lt">
                         <span class="order">{{ item.displayOrder }}</span>
                         <ng-container *ngIf="item.planUserpictures && item.planUserpictures.length > 0; else spotPicture">
@@ -222,81 +223,83 @@
                           </ng-container>
                         </span>
                       </div>
-                    </mat-expansion-panel-header>
-                    <!-- スポット名 -->
-                    <mat-form-field hintLabel="{{ 'Required' | translate }}" appearance="outline">
-                      <mat-label>{{ "SpotNameEx" | translate }}</mat-label>
-                      <textarea
-                        matInput
-                        #spotName
-                        name="spotName{{i}}"
-                        maxlength="30"
-                        placeholder="{{ 'SpotNameEx' | translate }}"
-                        required
-                        #inputinfo="ngModel"
-                        [(ngModel)]="item.spotName"
-                        (change)="onChange(false)"></textarea>
-                        <mat-hint align="end">{{spotName.value?.length || 0}}/30{{ "Characters" | translate }}</mat-hint>
-                    </mat-form-field>
-                    <!-- 写真 -->
-                    <div class="fileselector">
-                      {{ "MyplanSelectPhoto" | translate }}
-                      <input
-                      type="file"
-                      multiple="multiple"
-                      name="selectPhoto{{i}}"
-                      accept="image/*"
-                      (change)="onClickSelectPhotoSpot($event, item)" />
-                    </div>
-                    <div *ngIf="item.planUserpictures?.length > 0">
-                      <span>画角</span>
-                      <span *ngIf="item.aspectRatio === '1'">4:3</span>
-                      <span *ngIf="item.aspectRatio === '2'">4:5</span>
-                      <span *ngIf="item.aspectRatio === '3'">1:1</span>
-                      <span *ngIf="item.aspectRatio === '4'">16:9</span>
-                    </div>
-                    <div *ngFor="let picture of item.planUserpictures; index as j;trackBy: myTrackBy" class="picpreview">
-                      <div class="picpreview">
-                        <img width="100%" height="100%" [src]="picture.imageCropped ?? picture.picturePreviewUrl ?? picture.picture_url" />
-                        <button type="button" class="delete" (click)="onClickPhotoDeleteSpot(item, picture)"></button>
-                        <button *ngIf="picture.pictureFile" type="button" mat-button (click)="onClickCropSpot(item, picture)"><i>crop</i></button>
-                      </div>
-                    </div>
+                    </dt>
+                    <dt cdkDragHandle>
+                      <img src="../../../assets/img/icon_drag.svg" width="16px"/>
+                    </dt>
+                  </dl>
+                </mat-expansion-panel-header>
+                <!-- panel body -->
+                <mat-form-field hintLabel="{{ 'Required' | translate }}" appearance="outline">
+                  <textarea
+                    matInput
+                    #spotName
+                    name="spotName{{i}}"
+                    maxlength="30"
+                    placeholder="{{ 'SpotNameEx' | translate }}"
+                    required
+                    #inputinfo="ngModel"
+                    [(ngModel)]="item.spotName"
+                    (change)="onChange(false)"></textarea>
+                    <mat-hint align="end">{{spotName.value?.length || 0}}/30{{ "Characters" | translate }}</mat-hint>
+                </mat-form-field>
+                <!-- 写真 -->
+                <div class='select'>
+                  <div class="fileselector">
+                    {{ "MyplanSelectPhoto" | translate }}
+                    <input
+                    type="file"
+                    multiple="multiple"
+                    name="selectPhoto{{i}}"
+                    accept="image/*"
+                    (change)="onClickSelectPhotoSpot($event, item)" />
+                  </div>
+                  <label>スポットのイメージ画像を選択</label>
+                </div>
 
-                    <!-- スポット概要 -->
-                    <mat-form-field appearance="outline">
-                      <mat-label>{{ "SpotExplanationEx" | translate }}</mat-label>
-                      <textarea
-                        matInput
-                        #memo
-                        name="memo{{i}}"
-                        rows="5"
-                        placeholder="{{ 'SpotExplanationEx' | translate }}"
-                        #inputinfo="ngModel"
-                        rows="5"
-                        [(ngModel)]="item.memo"
-                        (change)="onChange(false)"></textarea>
-                        <mat-hint align="end">{{memo.value?.length || 0}}{{ "Characters" | translate }}</mat-hint>
-                        <button (click)="item.memo='';">clear</button>                    </mat-form-field>
-                    <!-- 滞在時間 -->
-                    <div class="select">
-                      <label>{{ "SuggestedTime" | translate }}</label>
-                      <div class="stayTime">
-                        <select name="stayTime{{i}}" [(ngModel)]="item.stayTime" (change)="onChange(true)">
-                          <option *ngFor="let sTime of $stayTime" [value]="sTime.id">
-                            {{ sTime.id }}{{ "Minute" | translate }}
-                          </option>
-                        </select>
-                      </div>
-                    </div>
-                  </mat-expansion-panel>
-                </mat-accordion>
-              </dt>
-              <dt cdkDragHandle>
-                <img src="../../../assets/img/icon_drag.svg" width="16px"/>
-              </dt>
-            </dl>
-          </div>
+                <div *ngFor="let picture of item.planUserpictures; index as j;trackBy: myTrackBy" class="picpreview">
+                  <img width="100%" height="100%" [src]="picture.imageCropped ?? picture.picturePreviewUrl ?? picture.picture_url" />
+                  <button type="button" class="delete" (click)="onClickPhotoDeleteSpot(item, picture)"></button>
+                  <button *ngIf="picture.pictureFile" type="button" class="crop" (click)="onClickCropSpot(item, picture)">{{"Edit"|translate}}</button>
+                </div>
+
+                <!-- スポット概要 -->
+                <mat-form-field appearance="outline">
+                  <textarea
+                    matInput
+                    #memo
+                    name="memo{{i}}"
+                    rows="5"
+                    placeholder="{{ 'SpotExplanationEx' | translate }}"
+                    #inputinfo="ngModel"
+                    rows="5"
+                    [(ngModel)]="item.memo"
+                    (change)="onChange(false)">
+                  </textarea>
+                  <mat-hint align="end">{{memo.value?.length || 0}}{{ "Characters" | translate }}</mat-hint>
+                  <mat-hint align="start"><a href="javascript:void(0);" (click)="item.memo='';">{{"labelClear" | translate}}</a></mat-hint>
+                </mat-form-field>
+
+                <!-- 滞在時間 -->
+                <div class="selectStay">
+                  <label>{{ "SuggestedTime" | translate }}</label>
+                  <div class="stayTime">
+                    <select name="stayTime{{i}}" [(ngModel)]="item.stayTime" (change)="onChange(true)">
+                      <option *ngFor="let sTime of $stayTime" [value]="sTime.id">
+                        {{ sTime.id }}{{ "Minute" | translate }}
+                      </option>
+                    </select>
+                  </div>
+                </div>
+                <div class='close'>
+                  <button (click)="mep.expanded = false;">閉じる</button>
+                </div>
+              </mat-expansion-panel>
+            </mat-accordion>
+          </ng-container>
+
+
+
           <div id="overlay" *ngIf="!row">
             <div class="guide">
               <p>{{ "MyPlan#Sec1" | translate }}<span class="inner">{{ "MyPlan#Sec2" | translate }}</span>{{ "MyPlan#Sec3" | translate }}</p>
