--- a/src/app/pages/myplan/myplan.component.scss
+++ b/src/app/pages/myplan/myplan.component.scss
@@ -406,6 +406,275 @@
       margin-bottom: 3px;
     }
 
+    .transfer{ // mat-expantion-panel
+      box-shadow: none;
+      border-radius: 0;
+      .mat-expansion-panel-header{
+        padding: 0;
+        height: 68px;
+        dl{
+          display: flex;
+          margin: initial;
+          align-items: center;
+          &.td{
+            width: 100vw;
+            line-height: 68px;
+            border-bottom: 1px solid #ccc;
+            dt{
+              text-align: center;
+              &:nth-child(1){
+                flex-basis: 12%;
+                button{
+                  all: initial;
+                  &.remove{
+                    @include ios-reset;
+                    &::before{
+                      content: url("../../../assets/img/icon_delete.svg");
+                      width: 17px;
+                      height: 17px;
+                      display: inline-block;
+                      vertical-align: -3px;
+                      margin-right: 3px;
+                    }
+                  }
+                }
+              }
+              // spot item
+              &:nth-child(2){
+                flex-basis: 76%;
+                display: flex;
+                .lt{
+                  position: relative;
+                  line-height: initial;
+                  span.order{
+                    position: absolute;
+                    background: url("../../../assets/img/pin_gold-s.svg") no-repeat;
+                    display: inline-block;
+                    width: 20px;
+                    height: 24px;
+                    background-size: contain;
+                    color: #fff;
+                    font-size: 12px;
+      
+                  }
+                  img{
+                    width: 56px;
+                    height: 56px;
+                    object-fit: cover;
+                    border-radius: 50%;
+                    margin-top: 4px;
+                    margin-right: 12px;
+                  }
+                }
+                .rt{
+                  line-height: initial;
+                  display: flex;
+                  flex-direction: column;
+                  justify-content: center;
+                  align-items: flex-start;
+                  .spotName{
+                    //width: 156px;
+                    overflow: hidden;
+                    // white-space: nowrap;
+                    text-overflow: ellipsis;
+                    text-align: left;
+                  }
+                  .areaName{
+                    font-size: 11px;
+                    color: #a6a29e;
+                  }
+                }
+              }
+              &:nth-child(3){
+                flex-basis: 12%;
+                
+              }
+            }
+          }    
+        }    
+      }
+
+      ::ng-deep .mat-expansion-panel-content{
+        background-color: $color-gld06;
+        .mat-expansion-panel-body{
+          padding-top: 16px;
+          .mat-form-field{
+            width: 100%;
+            font-size: 16px!important;
+            .mat-hint{
+              color: #fff;
+              a{
+                color: #fff;
+                text-decoration: none;
+              }
+            }
+            
+            .mat-form-field-wrapper{
+              padding-bottom: 1em;
+              .mat-form-field-hint-wrapper{
+                margin-top: 0;              
+                #mat-hint-8{
+                  color: red;
+                }
+              }
+            }
+            .mat-form-field-outline{
+              background-color: #fff;
+              border-radius: 6px;
+              top: 0;
+            }
+            .mat-form-field-infix{
+              border-top: 0;
+            }
+          }
+
+          .select{
+            .fileselector{
+              border: 1px solid $color-gld01;
+              border-radius: 12px;
+              display: inline-block;
+              padding: 2px 1em;
+              position: relative;
+              margin-top: 0.8em;
+              margin-bottom: 0.8em;
+              color: $color-gld01;
+              background-color: #fff;
+              input[type="file"] {
+                height: 100%;
+                left: 0;
+                opacity: 0;
+                position: absolute;
+                top: 0;
+                width: 100%;
+              }
+            }
+            label{
+              color: #fff;
+              font-size: 12px;
+              padding-left: 16px;
+            }
+          }
+
+          .picpreview{
+            position: relative;
+            button.delete{
+              all: unset;
+              position: absolute;
+              top: 6px;
+              right: 6px;
+              &::before{
+                content: url("../../../assets/img/btn_delete.svg");
+                display: inline-block;
+                width: 20px;
+                height: 20px;
+                vertical-align: text-bottom;
+              }
+            }
+            button.crop{
+              all:unset;
+              position: absolute;
+              top: 6px;
+              left: 6px;
+              width: 60px;
+              height: 24px;
+              background-color: #4A4A4A;
+              border-radius: 2px;
+              font-size: 12px;
+              color: #fff;
+              &::before{
+                content: url("../../../assets/img/icon_crop.svg");
+                display: inline-block;
+                width: 17px;
+                height: 17px;
+                vertical-align: sub;
+                padding: 0 5px;
+              }
+            }
+          }
+
+          .selectStay{
+            display: flex;
+            align-items: center;
+            label{
+              font-size: 12px;
+              color:#fff;
+              margin: 0 5px 0 5px;
+              width: 68px;
+            }
+            .stayTime{
+              width:30%;
+              position:relative;
+              
+              select{
+                -webkit-appearance:none;
+                appearance:none;
+                width:100%;
+                padding:6px 5px;
+                box-sizing:border-box;
+                font-size:16px;
+                border:#ccc 1px solid;
+                border-radius:15px;
+                background:#fff;
+              }
+  
+              &::after{
+                content:"";
+                display:block;
+                width:6px;
+                height:6px;
+                position:absolute;
+                right:15%;
+                top:40%;
+                border-bottom:#ae9a65 2px solid;
+                border-right:#ae9a65 2px solid;
+                transform:rotate(45deg)translateY(-30%);
+              }
+            }
+          }
+  
+          button.mat-stroked-button{
+            line-height: 25px;
+            height: 27px;
+            border-radius: 12.5px;
+            font-size: 14px;
+            border-color: $color-gld01;
+            color: $color-gld01;
+            margin-bottom: 1em;
+            background-color: #fff;
+          }
+  
+          .chips{
+            margin-bottom: 0;
+          }
+  
+          .close{
+            display: flex;
+            justify-content: flex-end;
+  
+            button{
+              all: unset;
+              width: 85px;
+              height: 26px;
+              border-radius: 13px;
+              background-color: #4A4A4A;
+              color: #fff;
+              &::before{
+                content: url("../../../assets/img/exp_close.svg");
+                display: inline-block;
+                width: 16px;
+                height: 16px;
+                vertical-align: text-top;
+                padding: 0 5px;
+              }
+            }
+          }
+
+        }
+      }
+
+    }
+
+
     dl{
       display: flex;
       margin: initial;
@@ -474,7 +743,6 @@
                   font-size: 16px!important;
                   .mat-form-field-wrapper{
                     padding-bottom: 0.5em;
-
                     .mat-form-field-hint-wrapper{
                       margin-top: 0.5em;
                     }
@@ -482,31 +750,33 @@
                   .mat-form-field-infix{
                     border: none;
                   }
-
                   &.mat-form-field-should-float{
                     .mat-form-field-label{
                       transform: translateY(-0.9em) scale(0.75);
                     }
                   }
                 }
-                .fileselector{
-                  border: 1px solid $color-gld01;
-                  border-radius: 12px;
-                  display: inline-block;
-                  padding: 2px 1em;
-                  position: relative;
-                  margin-bottom: 0.5em;
-                  margin-top: 1em;
-                  color: $color-gld01;
-                  input[type="file"] {
-                    height: 100%;
-                    left: 0;
-                    opacity: 0;
-                    position: absolute;
-                    top: 0;
-                    width: 100%;
+                .select{
+                  .fileselector{
+                    border: 1px solid $color-gld01;
+                    border-radius: 12px;
+                    display: inline-block;
+                    padding: 2px 1em;
+                    position: relative;
+                    margin-bottom: 0.5em;
+                    margin-top: 1em;
+                    color: $color-gld01;
+                    input[type="file"] {
+                      height: 100%;
+                      left: 0;
+                      opacity: 0;
+                      position: absolute;
+                      top: 0;
+                      width: 100%;
+                    }
                   }
                 }
+                
 
                 .picpreview{
                   position: relative;
