--- a/src/app/pages/myplan/myplan.component.scss
+++ b/src/app/pages/myplan/myplan.component.scss
@@ -406,6 +406,20 @@
       margin-bottom: 3px;
     }
 
+    dl{
+      display: flex;
+      margin: initial;
+      align-items: center;
+      position: relative;
+      &.th{
+        line-height: 24px;
+        dt{
+          font-size: 10px;
+          color: #a6a29e;
+        }
+      }
+    }
+
     .transfer{ // mat-expantion-panel
       box-shadow: none;
       border-radius: 0;
@@ -667,226 +681,6 @@
                 padding: 0 5px;
               }
             }
-          }
-
-        }
-      }
-
-    }
-
-
-    dl{
-      display: flex;
-      margin: initial;
-      align-items: center;
-      position: relative;
-      &.th{
-        line-height: 24px;
-        dt{
-          font-size: 10px;
-          color: #a6a29e;
-        }
-      }
-      
-      &.td{
-        line-height: 68px;
-        
-        border-bottom: 1px solid #ccc;
-        
-      }
-      dt{
-        text-align: center;
-        &:nth-child(1){
-          flex-basis: 12%;
-          button{
-            all: initial;
-            &.remove{
-              @include ios-reset;
-              position: absolute;
-              top: 19px;
-              left: 16px;
-              &::before{
-                content: url("../../../assets/img/icon_delete.svg");
-                width: 17px;
-                height: 17px;
-                display: inline-block;
-                vertical-align: -3px;
-                margin-right: 3px;
-              }
-            }
-          }
-        }
-        // spot item
-        &:nth-child(2){
-          flex-basis: 76%;
-          // display: flex;
-          .mat-expansion-panel{
-            box-shadow: none;
-            .mat-expansion-panel-header{
-              height: auto;
-              width: 100%;
-              padding: 0;
-
-              ::ng-deep .mat-expansion-indicator{
-                width: 12px;
-              }
-            }
-
-            ::ng-deep .mat-expansion-panel-content{
-              .mat-expansion-panel-body{
-                display: flex;
-                flex-direction: column;
-                align-items: baseline;
-                padding: 0 0 16px;
-                .mat-form-field{
-                  width: 100%;
-                  font-size: 16px!important;
-                  .mat-form-field-wrapper{
-                    padding-bottom: 0.5em;
-                    .mat-form-field-hint-wrapper{
-                      margin-top: 0.5em;
-                    }
-                  }
-                  .mat-form-field-infix{
-                    border: none;
-                  }
-                  &.mat-form-field-should-float{
-                    .mat-form-field-label{
-                      transform: translateY(-0.9em) scale(0.75);
-                    }
-                  }
-                }
-                .select{
-                  .fileselector{
-                    border: 1px solid $color-gld01;
-                    border-radius: 12px;
-                    display: inline-block;
-                    padding: 2px 1em;
-                    position: relative;
-                    margin-bottom: 0.5em;
-                    margin-top: 1em;
-                    color: $color-gld01;
-                    input[type="file"] {
-                      height: 100%;
-                      left: 0;
-                      opacity: 0;
-                      position: absolute;
-                      top: 0;
-                      width: 100%;
-                    }
-                  }
-                }
-                
-
-                .picpreview{
-                  position: relative;
-                  button.delete{
-                    all: unset;
-                    position: absolute;
-                    top: 6px;
-                    right: 6px;
-                    &::before{
-                      content: url("../../../assets/img/btn_delete.svg");
-                      display: inline-block;
-                      width: 20px;
-                      height: 20px;
-                      vertical-align: text-bottom;
-                    }
-                  }
-                }
-
-                .select{
-                  display: flex;
-                  align-items: center;
-                  label{
-                    font-size: 10px;
-                    color: #a6a29e;
-                    margin: 0 5px 0 5px;
-                    width: 68px;
-                  }
-                  .stayTime{
-                    width:100%;
-                    position:relative;
-                    
-                    select{
-                      -webkit-appearance:none;
-                      appearance:none;
-                      width:100%;
-                      padding:6px 5px;
-                      box-sizing:border-box;
-                      font-size:16px;
-                      border:#ccc 1px solid;
-                      border-radius:15px;
-                      background:#fff;
-                    }
-        
-                    &::after{
-                      content:"";
-                      display:block;
-                      width:6px;
-                      height:6px;
-                      position:absolute;
-                      right:15%;
-                      top:40%;
-                      border-bottom:#ae9a65 2px solid;
-                      border-right:#ae9a65 2px solid;
-                      transform:rotate(45deg)translateY(-30%);
-                    }
-                  }
-                }
-              }
-            }
-            
-          }
-          
-          .lt{
-            position: relative;
-            line-height: initial;
-            span.order{
-              position: absolute;
-              background: url("../../../assets/img/pin_gold-s.svg") no-repeat;
-              display: inline-block;
-              width: 20px;
-              height: 24px;
-              background-size: contain;
-              color: #fff;
-              font-size: 12px;
-
-            }
-            img{
-              width: 56px;
-              height: 56px;
-              object-fit: cover;
-              border-radius: 50%;
-              margin-top: 4px;
-              margin-right: 12px;
-            }
-          }
-          .rt{
-            line-height: initial;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: flex-start;
-            .spotName{
-              //width: 156px;
-              overflow: hidden;
-              // white-space: nowrap;
-              text-overflow: ellipsis;
-              text-align: left;
-            }
-            .areaName{
-              font-size: 11px;
-              color: #a6a29e;
-            }
-          }
-        }
-        &:nth-child(3){
-          flex-basis: 12%;
-          img{
-            position: absolute;
-            top: 24px;
-            right: 16px;
           }
         }
       }
@@ -1934,8 +1728,9 @@
 ::ng-deep.cdk-drag-preview {
   dl{
     display: flex;
-    // margin: initial;
+    margin: initial;
     align-items: center;
+    position: relative;
     &.th{
       line-height: 24px;
       dt{
@@ -1943,99 +1738,106 @@
         color: #a6a29e;
       }
     }
-    &.td{
-      line-height: 68px;
-      border-bottom: 1px solid #ccc;
-    }
-    dt{
-      text-align: center;
-      &:nth-child(1){
-        flex-basis: 16%;
-        width: 16%;
-        background-color: #fff;
-        button{
-          display: none;
-          all: initial;
-          &.remove{
-            @include ios-reset;
-            &::before{
-              content: "";
-            }
-          }
-        }
-      }
-      // spot item
-      &:nth-child(2){
-        flex-basis: 66%;
-        width: 66%;
+  }
+
+  .transfer{
+    box-shadow: none;
+    border-radius: 0;
+
+    .mat-expansion-panel-header{
+      padding: 0;
+      height: 68px;
+      dl{
         display: flex;
-
-        .mat-expansion-panel{
-          box-shadow: none;
-          .mat-expansion-panel-header{
-            height: auto;
-            padding: 0;
-
-            ::ng-deep .mat-expansion-indicator{
-              display: none;
+        margin: initial;
+        align-items: center;
+        &.td{
+          width: 100vw;
+          line-height: 68px;
+          border-bottom: 1px solid #ccc;
+          dt{
+            text-align: center;
+            &:nth-child(1){
+              flex-basis: 12%;
+              button{
+                all: initial;
+                &.remove{
+                  @include ios-reset;
+                  &::before{
+                    content: url("../../../assets/img/icon_delete.svg");
+                    width: 17px;
+                    height: 17px;
+                    display: inline-block;
+                    vertical-align: -3px;
+                    margin-right: 3px;
+                  }
+                }
+              }
+            }
+            // spot item
+            &:nth-child(2){
+              flex-basis: 76%;
+              display: flex;
+              .lt{
+                position: relative;
+                line-height: initial;
+                span.order{
+                  position: absolute;
+                  background: url("../../../assets/img/pin_gold-s.svg") no-repeat;
+                  display: inline-block;
+                  width: 20px;
+                  height: 24px;
+                  background-size: contain;
+                  color: #fff;
+                  font-size: 12px;
+    
+                }
+                img{
+                  width: 56px;
+                  height: 56px;
+                  object-fit: cover;
+                  border-radius: 50%;
+                  margin-top: 4px;
+                  margin-right: 12px;
+                }
+              }
+              .rt{
+                line-height: initial;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: flex-start;
+                .spotName{
+                  //width: 156px;
+                  overflow: hidden;
+                  // white-space: nowrap;
+                  text-overflow: ellipsis;
+                  text-align: left;
+                }
+                .areaName{
+                  font-size: 11px;
+                  color: #a6a29e;
+                }
+              }
+            }
+            &:nth-child(3){
+              flex-basis: 12%;
+              
             }
           }
-          .mat-expansion-panel-content{
-            display: none;
-          }
-        }
-        .lt{
-          position: relative;
-          line-height: initial;
-          span.order{
-            position: absolute;
-            background: url("../../../assets/img/pin_gold-s.svg") no-repeat;
-            display: inline-block;
-            width: 20px;
-            height: 24px;
-            background-size: contain;
-            color: #fff;
-            font-size: 12px;
+        }    
+      }    
+    }
 
-          }
-          img{
-            width: 56px;
-            height: 56px;
-            object-fit: cover;
-            border-radius: 50%;
-            margin-top: 4px;
-            margin-right: 12px;
-          }
-        }
-        .rt{
-          line-height: initial;
-          display: flex;
-          flex-direction: column;
-          justify-content: center;
-          align-items: flex-start;
-          .spotName{
-            width: 156px;
-            overflow: hidden;
-            white-space: nowrap;
-            text-overflow: ellipsis;
-            text-align: left;
-          }
-          .areaName{
-            font-size: 11px;
-            color: #a6a29e;
-          }
-        }
-      }
+    ::ng-deep .mat-expansion-panel-content{
+      //display: none;
+      visibility: hidden!important;
+      height: 0;
 
-      &:nth-child(3){
-        flex-basis: 18%;
-        width: 18%;
-        
-      }
-      
     }
   }
 }
+
 
 @media screen and (min-width: 415px) and (max-width: 1024px) { 
   form#myplan{
