--- a/src/app/pages/myplan/myplan.component.scss
+++ b/src/app/pages/myplan/myplan.component.scss
@@ -485,7 +485,7 @@
                     background-size: contain;
                     color: #fff;
                     font-size: 12px;
-      
+                    line-height: 22px;
                   }
                   img{
                     width: 56px;
