--- a/src/app/pages/mypage-userprofile/mypage-userprofile.component.scss
+++ b/src/app/pages/mypage-userprofile/mypage-userprofile.component.scss
@@ -54,6 +54,28 @@
           line-height: 20px;
           border-radius: 10px;
         }
+
+        button.crop{
+          all:unset;
+          position: absolute;
+          top: 6px;
+          left: 6px;
+          width: 60px;
+          height: 24px;
+          background-color: #4A4A4A;
+          border-radius: 2px;
+          font-size: 12px;
+          color: #fff;
+          &::before{
+            content: url("../../../assets/img/icon_crop.svg");
+            display: inline-block;
+            width: 17px;
+            height: 17px;
+            vertical-align: sub;
+            padding: 0 5px;
+          }
+        }
+
       }
       .user{
         .wrap{
@@ -76,7 +98,7 @@
             width: 80px;
             height: 80px;
             border-radius: 50%;
-            object-fit: fill;
+            object-fit: cover;
           }
         }
 
