--- a/src/app/layout/header/header.component.scss
+++ b/src/app/layout/header/header.component.scss
@@ -9,7 +9,7 @@ header {
     left: 0;
     margin-top: 0;
     transition: all 0.1s ease-out;
-    box-shadow: 0 4px 6px #0000001f;
+    // box-shadow: 0 4px 6px #0000001f;
   }
 
   &.collapse{
