--- a/src/app/pages/mypage/mypage.component.html
+++ b/src/app/pages/mypage/mypage.component.html
@@ -1,5 +1,6 @@
 
 <div class="title">
+  {{ common.name }}{{ "Sanno" | translate }}
   {{ "MyPage" | translate }}
 </div>
 <mat-tab-group [selectedIndex]="tabIndex" (selectedIndexChange)="tabChange($event)">
