--- a/src/app/pages/planspot/components/planspot-selector/planspot-selector.component.html
+++ b/src/app/pages/planspot/components/planspot-selector/planspot-selector.component.html
@@ -13,7 +13,7 @@
         (blur)="onKeywordSearch($event)"
       />
       <img class="prefix" src="../../../../../assets/img/keyword-search.svg" alt="">
-      <button mat-button class="reset" *ngIf="isVal" (click)="inputClear()">
+      <button mat-button class="reset" (click)="inputClear()">
         <img src="../../../../../assets/img/reset_btn.svg" alt="reset">
       </button>
     </div>
