--- a/src/app/parts/google-spot-dialog/google-spot-dialog.component.scss
+++ b/src/app/parts/google-spot-dialog/google-spot-dialog.component.scss
@@ -12,6 +12,10 @@
       margin-right: 6px;
       margin-top: 3px;
     }
+    span{
+      font-size: 12px;
+      margin-left: 6px;
+    }
   }
   mat-dialog-content{
     .form{
