--- a/src/app/pages/myplan/myplan.component.scss
+++ b/src/app/pages/myplan/myplan.component.scss
@@ -706,16 +706,19 @@
       position: absolute;
       left: 0; top: 0;
       width: 100%; height: 100%;
-      background: rgba(100, 100, 100, .8);
+      background: rgba(100, 100, 100, .9);
       z-index: 2147483647;
       display: flex;
       align-items: center;
       justify-content: center;
       .guide{
         margin: 1em;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         p{
           text-align: center;
-          font-size: 18px;
+          font-size: 16px;
           color: white;
           margin: unset;
           line-height: 1.5;
@@ -730,9 +733,64 @@
             margin: 0 4px;
           }
 
+          &.bold{
+            font-weight: bold;
+          }
+
           &.under{
+            font-size: 14px;
             margin-top: 1em;
           }
+
+          &.m1{
+            margin: 1em auto;
+          }
+        }
+
+        .inputWrapper{
+          display: flex;
+          height: 60px;
+          justify-content: center;
+          align-items: center;
+          flex-direction: column;
+          position: relative;
+
+          input.keyword{
+            height: 48px;
+            border: 1px solid #ccc;
+            border-radius: 29px;
+            width: 77vw;
+            font-size: 16px;
+            padding-left: 32px;
+          }
+      
+          img.prefix{
+            height: 18px;
+            width: 18px;
+            position: absolute;
+            left: 14px;
+            border-radius: 50%;
+          }
+
+          button.reset{
+            all:unset;
+            position: absolute;
+            right: 12px;
+            top: 0;
+            bottom: 0;
+            img{
+              width: 18px;
+            }
+          }
+        }
+
+        button.search{
+          width: 129px;
+          height: 32px;
+          border-radius: 16px;
+          background-color: $color-gld06;
+          color: #fff;
+          font-size: 16px;
         }
       }
     }
