--- a/src/app/parts/google-spot-dialog/google-spot-dialog.component.html
+++ b/src/app/parts/google-spot-dialog/google-spot-dialog.component.html
@@ -1,5 +1,5 @@
-<h2 mat-dialog-title *ngIf="data[1]">{{ "StartSearch" | translate }}</h2>
-<h2 mat-dialog-title *ngIf="!data[1]">{{ "EndSearch" | translate }}</h2>
+<h2 mat-dialog-title *ngIf="data[1]">{{ "StartSearch" | translate }}<span>{{"Option"|translate}}</span></h2>
+<h2 mat-dialog-title *ngIf="!data[1]">{{ "EndSearch" | translate }}<span>{{"Option"|translate}}</span></h2>
 <mat-dialog-content>
   <div class="form">
     <mat-form-field appearance="outline" style="width: 100%;">
