--- a/src/app/pages/spot-detail/spot-detail.component.scss
+++ b/src/app/pages/spot-detail/spot-detail.component.scss
@@ -17,44 +17,113 @@ p{
   border-radius: 0 !important;
 }
 
-#header {
-  padding: 12px 16px;
-  position: sticky;
-  top: 0;
-  z-index: 11;
-  border-radius: 0;
+#spotdtlheader {
+  padding: 0;
 
-  .mat-card-header{
+  .header{
+    margin: 0 16px 4px;
     display: flex;
-    align-items: center;
-    justify-content: space-around;
-    width: 100%;
+    font-weight: normal;
     .lt{
-      flex-basis: 90%;
-      width: 270px;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      .spotName{
-        color: #333;
-        font-weight: bold;
-        font-size: 14px;
-        line-height: 1.2;
-        // flex-basis: 90%;
-        white-space: nowrap;
-      }
-    }
-    
-    .rt{
-      flex-basis: 10%;
-
-      display: flex;
-      .plan_fav{
+      flex-basis: 32px;
+      .avatar{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
         img{
-          height: 16px;
+          width: 38px;
+          height: 38px;
+          object-fit: cover;
+          border-radius: 50%;
+        }
+        .username{
+          font-size: 11px;
+          white-space: nowrap;
+          width: 38px;
+          overflow: hidden;
+          text-align: center;
+        }
+      }
+
+    }
+    .rt{
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-between;
+      width: 100%;
+      .name{
+        display: flex;
+        align-items: center;
+        flex-basis: 70%;
+        .mark{
+          img{
+            width: 41px;
+            height: 16px;
+            margin: auto 12px;
+          }
+        }
+        .title{
+          font-size: 10px;
+          color: #000;
+          font-weight: bolder;
+        }
+      }
+      .buttons{
+        display: flex;
+        align-items: center;
+        flex-basis: 30%;
+        justify-content: flex-end;
+        .plan_fav{
+          img{
+            height: 16px;
+          }
+        }
+        .plan_add{
+          width: 59px;
         }
       }
     }
   }
+
+  // padding: 12px 16px;
+  // position: sticky;
+  // top: 0;
+  // z-index: 11;
+  // border-radius: 0;
+
+  // .mat-card-header{
+  //   display: flex;
+  //   align-items: center;
+  //   justify-content: space-around;
+  //   width: 100%;
+  //   .lt{
+  //     flex-basis: 90%;
+  //     width: 270px;
+  //     overflow: hidden;
+  //     text-overflow: ellipsis;
+  //     .spotName{
+  //       color: #333;
+  //       font-weight: bold;
+  //       font-size: 14px;
+  //       line-height: 1.2;
+  //       // flex-basis: 90%;
+  //       white-space: nowrap;
+  //     }
+  //   }
+    
+  //   .rt{
+  //     flex-basis: 10%;
+
+  //     display: flex;
+  //     .plan_fav{
+  //       img{
+  //         height: 16px;
+  //       }
+  //     }
+  //   }
+  // }
 
   &.onplan{
     &::after{
